--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,18 @@ version: '3.9'
 
 services:
 
+  app:
+    build: .
+    environment:
+      DB_NAME: ${DB_NAME}
+      USER_NAME: ${USER_NAME}
+      PASSWORD_FOR_DB: ${PASSWORD_FOR_DB}
+      PORT_DB: ${PORT_DB}
+    ports:
+      - 8002:80
+    depends_on:
+      - db
+
   db:
     image: postgres:16
     restart: always
