--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
+      - run: printenv
       - run: pip install --upgrade -r tests_requirements.txt
       - run: docker compose build
       - run: docker compose up -d
