--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       HOST_DB: db
     ports:
       - 8002:80
-    command: bash -c "alembic upgrade head && fastapi run app/main.py --port 80"
+    command: bash -c "printenv && alembic upgrade head && fastapi run app/main.py --port 80"
     depends_on:
       - db
 
